# path-of-mirrors

./: .gitignore  .pre-commit-config.yaml  .pre-push-hooks.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  RESTRUCTURE_SUMMARY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package-lock.json
.claude/: settings.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  ITEM_VALIDATION.md  README.md  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/backend/scripts/: migrate.sh
backend/resources/: pob_bridge.lua
backend/scripts/: .gitignore  CONFIG_GUIDE.md  README.md  collect_poeninja_samples.py  collect_trade_samples.py  collect_trade_samples_simple.py  collect_trade_schemas.py  create_first_superuser.py  inspect_pob_mods.py  list_endpoints.py  migrate.sh  poeninja_proto.py  test.sh  validate_build_design.py  validate_currency_design.py  validate_item_design.py  validate_modifier_design.py  validate_samples.py
backend/src/: main.py
backend/src/app/api/: dependencies.py
backend/src/app/api/v1/: rate_limits.py  users.py
backend/src/app/core/: config.py
backend/src/app/core/utils/: cache.py
backend/src/contexts/analysis/: __init__.py
backend/src/contexts/analysis/api/: __init__.py  routes.py
backend/src/contexts/analysis/services/: __init__.py  build_analyzer.py  ranking.py  stat_extractor.py
backend/src/contexts/builds/: __init__.py
backend/src/contexts/builds/api/: __init__.py  routes.py
backend/src/contexts/builds/domain/: schemas.py
backend/src/contexts/builds/services/: pob.py  stat_definitions.py
backend/src/contexts/catalog/: __init__.py
backend/src/contexts/catalog/api/: __init__.py  routes.py
backend/src/contexts/core/: __init__.py
backend/src/contexts/core/adapters/: postgres_repository.py
backend/src/contexts/core/domain/: CURRENCY_VALIDATION.md  MODIFIER_VALIDATION.md  __init__.py  base.py  build.py  currency.py  enums.py  item.py  league.py  modifier.py
backend/src/contexts/core/ports/: repository.py
backend/src/contexts/economy/: __init__.py
backend/src/contexts/economy/api/: __init__.py  routes.py
backend/src/contexts/economy/services/: trade.py
backend/src/contexts/placeholder/adapters/: postgres_repository.py
backend/src/contexts/placeholder/api/: routes.py
backend/src/contexts/placeholder/domain/: models.py  schemas.py
backend/src/contexts/placeholder/ports/: repository.py
backend/src/contexts/placeholder/services/: note_service.py
backend/src/contexts/upgrades/: __init__.py
backend/src/contexts/upgrades/api/: __init__.py
backend/src/contexts/upgrades/domain/: __init__.py
backend/src/contexts/upgrades/services/: __init__.py
backend/src/contexts/upstream/: __init__.py
backend/src/contexts/upstream/adapters/: __init__.py  poe1_provider.py  poe2_provider.py  postgres_repository.py  provider_factory.py
backend/src/contexts/upstream/api/: builds_routes.py  routes.py
backend/src/contexts/upstream/domain/: schemas.py
backend/src/contexts/upstream/ports/: __init__.py  provider.py  repository.py
backend/src/contexts/upstream/services/: ingestion_service.py  pob_bridge.lua  pob_parser.py  pob_runner.py  trade_api_client.py  upgrade_ranker.py
backend/src/infrastructure/: __init__.py  cache.py  config.py  database.py  health.py  http_client.py  logging.py  middleware.py  session_storage.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 2a1185ac4b28_create_notes_table.py
backend/src/shared/: __init__.py  game_context.py  http.py
backend/tests/: conftest.py  test_http_client_lifecycle.py  test_real_import_code.py  test_user.py
backend/tests/contexts/core/: test_currency_model.py  test_league_model.py
backend/tests/contexts/core/domain/: test_build.py  test_currency.py  test_item.py  test_modifier.py
backend/tests/contexts/placeholder/: __init__.py  test_notes_api.py
backend/tests/contexts/upgrades/: __init__.py
backend/tests/contexts/upstream/: __init__.py  test_integration_pob_trade.py  test_provider_factory.py  test_providers.py
backend/tests/contexts/upstream/api/: test_routes.py
backend/tests/infrastructure/: test_config_error_handling.py  test_request_id_propagation.py
(+139 files in other folders)
